syntax = "proto3";

package authentication;
option go_package = "/authenticationpb";

message AuthorizeRequest {
  string token = 1;
  string role = 2;
}

message AuthorizeResponse {
  bool allow = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int32 expiration = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {}

service AuthenticationService {
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {};
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc Logout(LogoutRequest) returns (LogoutResponse) {};
}
