syntax = "proto3";

package users;
option go_package = "/userspb";

message FetchRequest {
  string username = 1;
}

message FetchResponse {
  string firstName = 1;
  string lastName = 2;
}

service UsersService {
  rpc FetchByUsername(FetchRequest) returns (FetchResponse) {};
}
